crates/privacy-pools-sdk-core/tests/ui/secret_payloads_serde.stderr
error[E0277]: the trait bound `Commitment: serde::Serialize` is not satisfied
  --> tests/ui/secret_payloads_serde.rs:75:23
   |
75 |     require_serialize(&commitment);
   |     ----------------- ^^^^^^^^^^^ the trait `Serialize` is not implemented for `Commitment`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Commitment` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_payloads_serde.rs:7:25
   |
 7 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `CommitmentWitnessRequest: serde::Serialize` is not satisfied
  --> tests/ui/secret_payloads_serde.rs:76:23
   |
76 |     require_serialize(&commitment_request);
   |     ----------------- ^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `CommitmentWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `CommitmentWitnessRequest` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_payloads_serde.rs:7:25
   |
 7 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `CommitmentCircuitInput: serde::Serialize` is not satisfied
  --> tests/ui/secret_payloads_serde.rs:77:23
   |
77 |     require_serialize(&commitment_input);
   |     ----------------- ^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `CommitmentCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `CommitmentCircuitInput` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_payloads_serde.rs:7:25
   |
 7 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `WithdrawalWitnessRequest: serde::Serialize` is not satisfied
  --> tests/ui/secret_payloads_serde.rs:78:23
   |
78 |     require_serialize(&withdrawal_request);
   |     ----------------- ^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `WithdrawalWitnessRequest`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `WithdrawalWitnessRequest` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_payloads_serde.rs:7:25
   |
 7 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `WithdrawalCircuitInput: serde::Serialize` is not satisfied
  --> tests/ui/secret_payloads_serde.rs:79:23
   |
79 |     require_serialize(&withdrawal_input);
   |     ----------------- ^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `WithdrawalCircuitInput`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `WithdrawalCircuitInput` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `require_serialize`
  --> tests/ui/secret_payloads_serde.rs:7:25
   |
 7 | fn require_serialize<T: serde::Serialize>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^ required by this bound in `require_serialize`
